--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "hardhat run scripts/deploy.ts --network localhost"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
