--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@openzeppelin/contracts": "^4.9.3",
+    "@tanstack/react-query": "^5.77.0",
     "axios": "^1.6.2",
     "ethers": "^6.7.1",
     "framer-motion": "^10.16.4",
     "next": "13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "wagmi": "^2.15.4",
     "web3modal": "^1.9.12"
   },
   "devDependencies": {
