--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "web3modal": "^1.9.12"
   },
   "devDependencies": {
